src/crode/test/valid/eye.crode
canvas "Eye" width 800 height 600 {
  let eye = circle {
    radius 30
    color black
  }

  draw eye at (80, 50)
}
